<resources>
    <string name="app_name">Chatphile</string>
    <string name="base_url">https://chatphile-web-service.herokuapp.com/</string>

    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Retype Password</string>
    <string name="hint_old_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_enter_message">Enter Message</string>
    <string name="hint_chat_name">Enter chat name</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="action_new_chat">New chat</string>
    <string name="action_individual_chat">Individual chat</string>
    <string name="action_settings">Settings</string>

    <string name="title_weather">Weather</string>
    <string name="title_home">Home</string>
    <string name="title_chats">Chats</string>
    <string name="title_chat_room">Chat room</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_sent">Sent Invitations</string>
    <string name="title_invitation">Current Invitations</string>
    <string name="title_add">Add Friend</string>
    <string name="title_create_chat">Add Friends to Chat</string>
    <string name="title_accepted_member">Selected contact(s):</string>
    <string name="title_search_people">Contacts</string>
    <string name="title_contact_nickname">Contact Nickname</string>
    <string name="title_full_name">Full Name</string>

    <string name="button_sent_title">Sent</string>
    <string name="button_send">Send</string>
    <string name="button_contacts_title">Contacts</string>
    <string name="button_invite_title">Invites</string>
    <string name="button_add_title">Add</string>
    <string name="button_create_chat">Create</string>

    <string name="icon_profile">Profile icon</string>
    <string name="icon_enter_chat">Enter chat icon</string>
    <string name="icon_user_profile">User icon</string>
    <string name="icon_send_button">Send icon</string>

    <string name="chat_list_mock_last_message">Last message goes here</string>
    <string name="chat_room_mock_date">May 4</string>
    <string name="chat_room_mock_message">Numero uno</string>
    <string name="chat_room_mock_time">8:30</string>
    <string name="chat_room_mock_name">Charles Bryan</string>

    <string name="main_settings">Settings</string>
    <string name="main_profile">Profile</string>

    <string name="switch_sign_in">Stay Signed In</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="hint_verify">We sent a email to the following email address, please enter the verification code to processed.</string>

    <string name="register_password_info">Password requirements: \n
    - at least 8 characters long \n
    - at least one special characters: @#$%&amp;*!? \n
    - at least one digit \n
    - at least one alphabetic character \n
    - no whitespace</string>
</resources>
