<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_add_friend"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.contact.add.AddFriendFragment" >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_contact_add"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@color/bottomNavColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/add_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_contact_add" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/add_list"
        android:name="edu.uw.tcss450.chatphile.ui.contact.add.AddFriendFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_search"
        tools:context="edu.uw.tcss450.chatphile.ui.contact.add.AddFriendFragment"
        tools:listitem="@layout/fragment_add_card" />

    <Button
        android:id="@+id/button_contact_add"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="#00FFFFFF"
        android:drawableTop="@drawable/ic_contact_list"
        android:text="@string/button_contacts_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_invite_add"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:background="#00FFFFFF"
        android:drawableTop="@drawable/ic_contact_invites"
        android:text="@string/button_invite_title"
        app:layout_constraintEnd_toStartOf="@+id/button_add_add"
        app:layout_constraintStart_toEndOf="@+id/button_contact_add"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_add_add"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="#00FFFFFF"
        android:drawableTop="@drawable/ic_contact_search"
        android:text="@string/button_add_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>